--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.0",
+    "@types/luxon": "^2.0.8",
     "axios": "^0.24.0",
+    "luxon": "^2.2.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
